# esp-adf_onoffline_SR

./: lunchpad_test.toml
components/audio_hal/: audio_hal.c
components/audio_hal/include/: audio_hal.h
components/audio_recorder/: CMakeLists.txt  app_sr.c  app_sr.h  audio_recorder.c  recorder_sr.c
components/clouds/dueros/lightduer/include/: lightduer_log.h
components/dueros_service/: duer_profile
components/esp_peripherals/lib/adc_button/: adc_button.c
examples/dueros/: CMakeLists.txt  partitions_dueros_example_esp32s3.csv
examples/dueros/components/espressif__esp-box/: .component_hash  CMakeLists.txt  esp-box.c
examples/dueros/components/espressif__esp-box/include/bsp/: esp-box.h
examples/dueros/components/espressif__esp_lcd_touch_tt21100/: .component_hash  CMakeLists.txt
examples/dueros/components/espressif__esp_lvgl_port/: CMakeLists.txt  esp_lvgl_port.c
examples/dueros/components/espressif__esp_lvgl_port/include/: esp_lvgl_port.h
examples/dueros/main/: CMakeLists.txt  app_main.c  duer_audio_wrapper.c  dueros_app.c
examples/dueros/main/app/: lv_example_image.h  lv_example_label.c  lv_example_label.h  lv_example_pub.c  lv_example_pub.h  lv_schedule_basic.c  lv_schedule_basic.h  ui_boot_animate.c  ui_sr.c  ui_sr.h
examples/dueros/main/app/resource/: mic_logo.c
